--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <main>
+        <h1>CURRENCY CONVERTER</h1>
         <form id="form">
             <label for="amount">Value</label>
             <input type="text" id="amount">
